--- a/package.json
+++ b/package.json
@@ -140,6 +140,13 @@
     ]
   },
   "release": {
-    "verifyConditions": "condition-circle"
+    "verifyConditions": "condition-circle",
+    "analyzeCommits": {
+      "preset": "angular",
+      "releaseRules": [
+        {"type": "docs", "scope": "readme.md", "release": "patch"},
+        {"type": "refactor", "release": "patch"}
+      ]
+    }
   }
 }
