chore: format package.json (#995)

--- a/package.json
+++ b/package.json
@@ -144,8 +144,15 @@
     "analyzeCommits": {
       "preset": "angular",
       "releaseRules": [
-        {"type": "docs", "scope": "readme.md", "release": "patch"},
-        {"type": "refactor", "release": "patch"}
+        {
+          "type": "docs",
+          "scope": "readme.md",
+          "release": "patch"
+        },
+        {
+          "type": "refactor",
+          "release": "patch"
+        }
       ]
     }
   }
