--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "commander": "2.11.0",
     "conventional-commits-detector": "0.1.1",
     "convert-hrtime": "2.0.0",
+    "deepcopy": "0.6.3",
     "fs-extra": "4.0.2",
     "get-installed-path": "4.0.8",
     "gh-got": "6.0.0",
