--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "changelog": "1.4.0",
     "child-process-promise": "2.2.1",
     "commander": "2.11.0",
+    "compare-versions": "3.1.0",
     "conventional-commits-detector": "0.1.1",
     "convert-hrtime": "2.0.0",
     "deepcopy": "0.6.3",
