fix: configure publishConfig and release.branch in package.json (#1070)

--- a/package.json
+++ b/package.json
@@ -144,7 +144,11 @@
       "rarkins"
     ]
   },
+  "publishConfig": {
+    "tag": "latest"
+  },
   "release": {
+    "branch": "master",
     "verifyConditions": "condition-circle",
     "analyzeCommits": {
       "preset": "angular",
