refactor: remove config.api and use platform dispatcher (#1114)

--- a/package.json
+++ b/package.json
@@ -110,6 +110,9 @@
       "lcov",
       "text-summary"
     ],
+    "setupFiles": [
+      "./test/platform.js"
+    ],
     "setupTestFrameworkScriptFile": "./test/chai.js"
   },
   "prettier": {
