--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "update"
   ],
   "author": "Rhys Arkins <rhys@arkins.net>",
+  "contributors": [
+    "Jean-Yves Couët <jycouet@gmail.com>"
+  ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/singapore/renovate/issues"
@@ -72,7 +75,8 @@
     "showdown": "1.8.2",
     "tmp-promise": "1.0.4",
     "traverse": "0.6.6",
-    "yarn": "1.3.2"
+    "yarn": "1.3.2",
+    "vso-node-api": "6.2.8-preview"
   },
   "devDependencies": {
     "babel-plugin-transform-object-rest-spread": "6.26.0",
