--- a/package.json
+++ b/package.json
@@ -75,8 +75,8 @@
     "showdown": "1.8.2",
     "tmp-promise": "1.0.4",
     "traverse": "0.6.6",
-    "yarn": "1.3.2",
-    "vso-node-api": "6.2.8-preview"
+    "vso-node-api": "6.2.8-preview",
+    "yarn": "1.3.2"
   },
   "devDependencies": {
     "babel-plugin-transform-object-rest-spread": "6.26.0",
