chore: fix dev environment for Windows (#1156)
- use cross-env for jest
- escape `prettier` script
- remove snapshots that include `path.join()`

Closes #1148

--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "heroku-push": "git push heroku master",
     "heroku-scheduler": "heroku addons:open scheduler",
-    "jest": "NODE_ENV=test LOG_LEVEL=fatal jest",
+    "jest": "cross-env NODE_ENV=test LOG_LEVEL=fatal jest",
     "lint-fix": "eslint --fix lib test",
     "lint": "eslint lib test",
-    "prettier": "prettier '**/*.{js,json}' --write",
+    "prettier": "prettier \"**/*.{js,json}\" --write",
     "start": "node lib/renovate",
     "test-dirty": "git diff --exit-code",
     "test": "npm run prettier -- --list-different && npm run lint && npm run jest",
@@ -82,6 +82,7 @@
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "chai": "4.1.2",
     "condition-circle": "1.5.0",
+    "cross-env": "5.1.1",
     "eslint": "4.11.0",
     "eslint-config-airbnb-base": "12.1.0",
     "eslint-config-prettier": "2.7.0",
