--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "keyv": "3.0.0",
     "later": "1.2.0",
     "lodash": "4.17.4",
+    "make-fetch-happen": "2.5.0",
     "minimatch": "3.0.4",
     "moment": "2.19.2",
     "moment-timezone": "0.5.14",
@@ -91,6 +92,7 @@
     "jest": "21.2.1",
     "mkdirp": "0.5.1",
     "mockdate": "2.0.2",
+    "nock": "9.1.0",
     "prettier": "1.8.2",
     "rimraf": "2.6.2",
     "semantic-release": "8.2.0"
