fix: add back publish config to package.json (#1162)

--- a/package.json
+++ b/package.json
@@ -144,6 +144,9 @@
       "rarkins"
     ]
   },
+  "publishConfig": {
+    "tag": "latest"
+  },
   "release": {
     "branch": "master",
     "verifyConditions": "condition-circle",
