--- a/package.json
+++ b/package.json
@@ -61,12 +61,12 @@
     "json-dup-key-validator": "1.0.2",
     "json-stringify-pretty-compact": "1.0.4",
     "jsonwebtoken": "8.1.0",
-    "keyv": "3.0.0",
     "later": "1.2.0",
     "lodash": "4.17.4",
     "minimatch": "3.0.4",
     "moment": "2.19.2",
     "moment-timezone": "0.5.14",
+    "nock": "9.1.0",
     "npm": "5.5.1",
     "parse-link-header": "1.0.1",
     "registry-auth-token": "3.3.1",
