fix: run semantic-release (#1223)
Run semantic-release@v9 as a deploy script on Travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,3 +24,10 @@ script:
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
+
+deploy:
+  provider: script
+  script: yarn run semantic-release
+  skip_cleanup: true
+  on:
+    branch: master
