chore: remove semantic-release npm script

--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "start": "node lib/renovate",
     "test-dirty": "git diff --exit-code",
     "test": "npm run prettier -- --list-different && npm run lint && npm run jest",
-    "update-docs": "bash bin/update-docs.sh",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
+    "update-docs": "bash bin/update-docs.sh"
   },
   "repository": {
     "type": "git",
