chore: simplify codecov from travis (#1224)

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ script:
   - yarn run jest --maxWorkers=4
 
 after_success:
-  - bash <(curl -s https://codecov.io/bash)
+  - yarn run codecov
 
 deploy:
   provider: script
