--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
   "devDependencies": {
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "chai": "4.1.2",
+    "codecov": "3.0.0",
     "cross-env": "5.1.1",
     "eslint": "4.11.0",
     "eslint-config-airbnb-base": "12.1.0",
